tdf#89901 corectly interpret COL_TRANSPARENT

in wmfemfhelper when converting Metafile to
sequence of Prmitives. In the MetafileActions
MetaLineColorAction and MetaFillColorAction
usage of COL_TRANSPARENT must switch off line
draw/resp. fill

Change-Id: Id5754773c06b7f4aa8824dce9b8b9e7e526e6067